Quorum3/Library/Tests/IfStatement/Pass/IfConstIn.quorum
class Main 
    action Main
        boolean a = true
        if a
            a = false
        end
        output a
    end
end