Quorum3/Library/Tests/IfStatement/Fail/ChainedIf.quorum
//boolean sayStatement = false 
//text greeting = "Hello!" 
//if saygreeting = sayStatement = true end

boolean a = 5 = 10 = 15